--- a/Jahresziele/2015/ABBYY/dev/CkgAbbyyPresentation/CkgAbbyyPresentation/Resources/LocalStyles.xaml
+++ b/Jahresziele/2015/ABBYY/dev/CkgAbbyyPresentation/CkgAbbyyPresentation/Resources/LocalStyles.xaml
@@ -1,6 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:Fluent="clr-namespace:Fluent;assembly=Fluent">
 
+    <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
+
     <LinearGradientBrush x:Key="brush/LightGrayGradientBg" EndPoint="0.5,1" StartPoint="0.5,0">
         <GradientStop Color="#FFFAFAFB" Offset="0"/>
         <GradientStop Color="#FFE5E5E5" Offset="1"/>
