--- a/dev/work/Tools/WpfTools4/Resources/Styles.xaml
+++ b/dev/work/Tools/WpfTools4/Resources/Styles.xaml
@@ -137,7 +137,6 @@
             <Trigger Property="IsSelected" Value="True">
                 <Setter Property="Background" Value="Transparent" />
                 <Setter Property="BorderBrush" Value="Transparent" />
-                <Setter Property="Foreground" Value="Black" />
             </Trigger>
         </Style.Triggers>
     </Style>
@@ -168,7 +167,6 @@
         <Style.Triggers>
             <Trigger Property="IsSelected" Value="True">
                 <Setter Property="Background" Value="{DynamicResource brGradientDataGridCell}" />
-                <Setter Property="Foreground" Value="Black" />
             </Trigger>
         </Style.Triggers>
     </Style>
@@ -604,10 +602,10 @@
         <GradientStop Color="#2FB6B6B6" Offset="1"/>
     </LinearGradientBrush>
     <LinearGradientBrush x:Key="brGradientLightGrayInverse" EndPoint="0.5,1" StartPoint="0.5,0">
-        <GradientStop Color="#6FD2D2D2" Offset="1"/>
-        <GradientStop Color="#6FB8B8B8" Offset="0.51"/>
-        <GradientStop Color="#6F929292" Offset="0.50"/>
-        <GradientStop Color="#6F555555" Offset="0"/>
+        <GradientStop Color="#66D2D2D2" Offset="1"/>
+        <GradientStop Color="#66B8B8B8" Offset="0.51"/>
+        <GradientStop Color="#66929292" Offset="0.50"/>
+        <GradientStop Color="#66555555" Offset="0"/>
     </LinearGradientBrush>
     <LinearGradientBrush x:Key="brGradientSuperLightGrayInverse" EndPoint="0.5,1" StartPoint="0.5,0">
         <GradientStop Color="#2FD2D2D2" Offset="1"/>
@@ -789,7 +787,9 @@
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                                <Border Name="Border" BorderThickness="1" BorderBrush="{DynamicResource brGradientSuperLightGrayInverse}" Background="{DynamicResource brGradientSuperLightGray}" CornerRadius="7" Padding="3,1,3,1" ToolTip="{Binding Tag, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListBoxItem}}">
+                                <Border Name="Border" BorderThickness="1" BorderBrush="{DynamicResource brGradientSuperLightGrayInverse}" Background="{DynamicResource brGradientSuperLightGray}" CornerRadius="9" 
+                                        Margin="3,0,3,0"
+                                        Padding="3,1,3,1" ToolTip="{Binding Tag, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListBoxItem}}">
                                     <TextBlock Name="rb" Focusable="False" IsHitTestVisible="False" VerticalAlignment="Center">
                                         <ContentPresenter />
                                     </TextBlock>
