--- a/inetpub/wwwroot/ServicesMvc/Areas/DataKonverter/Views/Admin/Index.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/DataKonverter/Views/Admin/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@model CkgDomainLogic.DataKonverter.ViewModels.KroschkeDataKonverterViewModel
 
 <link href="~/content/DataKonverter-Main.css" rel="stylesheet" type="text/css" />
-@*<script src="@Url.Content("~/Scripts/jsPlumb-2.0.3.js")" type="text/javascript"></script>*@
 <script src="@Url.Content("~/Scripts/jsPlumb-2.0.3.js")" type="text/javascript"></script>
 
 <style>
@@ -209,6 +208,21 @@
     .processorpara2 {
         width: 60px; float: left !important; margin-left: 2px; margin-bottom: 2px;display: none;
     }
+    
+    .nodetitle-div {
+        margin-left: 0px !important;
+    }
+
+    .nodetitle {
+        font-size: 12px;margin-top: 2px;margin-bottom: -3px;background-color: #add8e6;padding-left: 4px;font-weight: bold;border: 1px solid gray;
+    }
+    
+    .btn-xs {
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-bottom: 4px;
+    }
+    
 </style>
 <h3 class="page-title">Data-Konverter <small>Administration</small></h3>
 
