Optik und automatischer Wizard-Sprung nach Dateiauswahl.

--- a/inetpub/wwwroot/ServicesMvc/Areas/DataKonverter/Views/Admin/Partial/Konfiguration.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/DataKonverter/Views/Admin/Partial/Konfiguration.cshtml
@@ -4,8 +4,7 @@
     <h4>Konfiguration</h4>
 
     <div class="w" style="visibility: hidden; height: 0px; padding: 0px; margin: 0px;">DUMMY</div>
-
-    <span class="float-left">
+        <span class="float-left">
         <button class="btn white" onclick="GotoRecord('first');">
             <<
         </button>
@@ -25,7 +24,7 @@
         </span>
     </span>
 
-    <span class="float-left">
+        <span class="float-left">
         <button class="btn white" onclick="AddProcessor();">
             Prozessor
             <i class="halflings-icon  plus"></i>
@@ -48,7 +47,8 @@
         </button>
     </span>
 
-    <span class="clearfix"></span>
+    <div style="clear:both"></div>
+
     <div id="processorTemplate" class="processor hidden">
         <div class="title">
             <div class="processortitle float-left" style="margin-top: -5px; margin-left: 15px;">Prozessor</div>
