--- a/inetpub/wwwroot/ServicesMvc/Views/Fahrzeuge/Carporterfassung/FahrzeugnacherfassungForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Fahrzeuge/Carporterfassung/FahrzeugnacherfassungForm.cshtml
@@ -32,7 +32,7 @@
         @Html.FormTextBoxFor(m => m.AuftragsNr, new { @class = "m-wrap medium", col = "right", @readonly = "readonly" })
 
         @Html.FormDatePickerFor(m => m.DemontageDatum, new { @class = "m-wrap small", col = "left" })
-        if (Model.AnzahlKennzeichen == "2")
+        if (Model.AnzahlKennzeichen == "2" || Model.Abgemeldet)
         {
             @Html.HiddenFor(m => m.AnzahlKennzeichen)
             @Html.FormTextBoxFor(m => m.AnzahlKennzeichen, new { @class = "m-wrap medium", col = "right", @readonly = "readonly" })
@@ -44,7 +44,7 @@
 
         @Html.HiddenFor(m => m.Abgemeldet)
         @Html.FormCheckBoxFor(m => m.Abgemeldet, new { @class = "m-wrap", col = "left", disabled = "disabled" }, labelHidden: true)
-        if (Model.Zb1Vorhanden == "1")
+        if (Model.Zb1Vorhanden == "1" || Model.Zb1Vorhanden == "0")
         {
             @Html.HiddenFor(m => m.Zb1Vorhanden)
             @Html.FormTextBoxFor(m => m.Zb1VorhandenText, new { @class = "m-wrap medium", col = "right", @readonly = "readonly" })
@@ -54,7 +54,7 @@
             @Html.FormDropDownListFor(m => m.Zb1Vorhanden, CarporterfassungModel.MaterialVorhandenOptionen, new { @class = "m-wrap medium", col = "right" })
         }
 
-        if (Model.Zb2Vorhanden == "1")
+        if (Model.Zb2Vorhanden == "1" || Model.Zb2Vorhanden == "0")
         {
             @Html.HiddenFor(m => m.Zb2Vorhanden)
             @Html.FormTextBoxFor(m => m.Zb2VorhandenText, new { @class = "m-wrap medium", col = "left", @readonly = "readonly" })
@@ -63,7 +63,7 @@
         {
             @Html.FormDropDownListFor(m => m.Zb2Vorhanden, CarporterfassungModel.MaterialVorhandenOptionen, new { @class = "m-wrap medium", col = "left" })
         }
-        if (Model.CocVorhanden == "1")
+        if (Model.CocVorhanden == "1" || Model.CocVorhanden == "0")
         {
             @Html.HiddenFor(m => m.CocVorhanden)
             @Html.FormTextBoxFor(m => m.CocVorhandenText, new { @class = "m-wrap medium", col = "right", @readonly = "readonly" })
@@ -73,7 +73,7 @@
             @Html.FormDropDownListFor(m => m.CocVorhanden, CarporterfassungModel.MaterialVorhandenOptionen, new { @class = "m-wrap medium", col = "right" })
         }
 
-        if (Model.ServiceheftVorhanden == "1")
+        if (Model.ServiceheftVorhanden == "1" || Model.ServiceheftVorhanden == "0")
         {
             @Html.HiddenFor(m => m.ServiceheftVorhanden)
             @Html.FormTextBoxFor(m => m.ServiceheftVorhandenText, new { @class = "m-wrap medium", col = "left", @readonly = "readonly" })
@@ -82,7 +82,7 @@
         {
             @Html.FormDropDownListFor(m => m.ServiceheftVorhanden, CarporterfassungModel.MaterialVorhandenOptionen, new { @class = "m-wrap medium", col = "left" })
         }
-        if (Model.HuAuBerichtVorhanden == "1")
+        if (Model.HuAuBerichtVorhanden == "1" || Model.HuAuBerichtVorhanden == "0")
         {
             @Html.HiddenFor(m => m.HuAuBerichtVorhanden)
             @Html.FormTextBoxFor(m => m.HuAuBerichtVorhandenText, new { @class = "m-wrap medium", col = "right", @readonly = "readonly" })
@@ -92,7 +92,7 @@
             @Html.FormDropDownListFor(m => m.HuAuBerichtVorhanden, CarporterfassungModel.MaterialVorhandenOptionen, new { @class = "m-wrap medium", col = "right" })
         }
 
-        if (Model.ZweitschluesselVorhanden == "1")
+        if (Model.ZweitschluesselVorhanden == "1" || Model.ZweitschluesselVorhanden == "0")
         {
             @Html.HiddenFor(m => m.ZweitschluesselVorhanden)
             @Html.FormTextBoxFor(m => m.ZweitschluesselVorhandenText, new { @class = "m-wrap medium", col = "left", @readonly = "readonly" })
@@ -101,7 +101,7 @@
         {
             @Html.FormDropDownListFor(m => m.ZweitschluesselVorhanden, CarporterfassungModel.MaterialVorhandenOptionen, new { @class = "m-wrap medium", col = "left" })
         }
-        if (Model.NaviCdVorhanden == "1")
+        if (Model.NaviCdVorhanden == "1" || Model.NaviCdVorhanden == "0")
         {
             @Html.HiddenFor(m => m.NaviCdVorhanden)
             @Html.FormTextBoxFor(m => m.NaviCdVorhandenText, new { @class = "m-wrap medium", col = "right", @readonly = "readonly" })
