--- a/dev/work/Tools/WpfTools4/Resources/Images.xaml
+++ b/dev/work/Tools/WpfTools4/Resources/Images.xaml
@@ -83,6 +83,7 @@
     <Image x:Shared="False" x:Key="image/24x24/email" Source="pack://application:,,,/WpfTools4;component/Images/24x24/email.png" SnapsToDevicePixels="True" Width="24" Height="24" />
     <Image x:Shared="False" x:Key="image/24x24/zip" Source="pack://application:,,,/WpfTools4;component/Images/24x24/zip.png" SnapsToDevicePixels="True" Width="24" Height="24" />
     <Image x:Shared="False" x:Key="image/24x24/file_copy" Source="pack://application:,,,/WpfTools4;component/Images/24x24/file_copy.png" SnapsToDevicePixels="True" Width="24" Height="24" />
+    <Image x:Shared="False" x:Key="image/24x24/play" Source="pack://application:,,,/WpfTools4;component/Images/24x24/play.png" SnapsToDevicePixels="True" Width="24" Height="24" />
 
     <Image x:Shared="False" x:Key="image/32x32/new" Source="pack://application:,,,/WpfTools4;component/Images/32x32/new.png" SnapsToDevicePixels="True" Width="32" Height="32" />
     <Image x:Shared="False" x:Key="image/32x32/save" Source="pack://application:,,,/WpfTools4;component/Images/32x32/save.png" SnapsToDevicePixels="True" Width="32" Height="32" />
