Anzahl Kennzeichen in Carportnacherfassung nicht mehr änderbar

--- a/inetpub/wwwroot/ServicesMvc/Views/Fahrzeuge/Carporterfassung/FahrzeugnacherfassungForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Fahrzeuge/Carporterfassung/FahrzeugnacherfassungForm.cshtml
@@ -32,15 +32,8 @@
         @Html.FormTextBoxFor(m => m.AuftragsNr, new { @class = "m-wrap medium", col = "right", @readonly = "readonly" })
 
         @Html.FormDatePickerFor(m => m.DemontageDatum, new { @class = "m-wrap small", col = "left" })
-        if (Model.AnzahlKennzeichen == "2" || Model.Abgemeldet)
-        {
-            @Html.HiddenFor(m => m.AnzahlKennzeichen)
-            @Html.FormTextBoxFor(m => m.AnzahlKennzeichenText, new { @class = "m-wrap medium", col = "right", @readonly = "readonly" })
-        }
-        else
-        {
-            @Html.FormDropDownListFor(m => m.AnzahlKennzeichen, CarporterfassungModel.AnzahlKennzeichenOptionen, new { @class = "m-wrap medium", col = "right", onchange = "ApplySelection(false)" })
-        }
+        @Html.HiddenFor(m => m.AnzahlKennzeichen)
+        @Html.FormTextBoxFor(m => m.AnzahlKennzeichenText, new { @class = "m-wrap medium", col = "right", @readonly = "readonly" })
 
         @Html.HiddenFor(m => m.Abgemeldet)
         @Html.FormCheckBoxFor(m => m.Abgemeldet, new { @class = "m-wrap", col = "left", disabled = "disabled" }, labelHidden: true)
@@ -92,7 +85,7 @@
             @Html.FormDropDownListFor(m => m.HuAuBerichtVorhanden, CarporterfassungModel.MaterialVorhandenOptionen, new { @class = "m-wrap medium", col = "right" })
         }
 
-        if (Model.ZweitschluesselVorhanden == "1" || Model.ZweitschluesselVorhanden == "0")
+        if (Model.ZweitschluesselVorhanden == "1" || Model.ZweitschluesselVorhanden == "2" || Model.ZweitschluesselVorhanden == "3" || Model.ZweitschluesselVorhanden == "0")
         {
             @Html.HiddenFor(m => m.ZweitschluesselVorhanden)
             @Html.FormTextBoxFor(m => m.ZweitschluesselVorhandenText, new { @class = "m-wrap medium", col = "left", @readonly = "readonly" })
