--- a/Jahresziele/2015/ABBYY/dev/CkgAbbyyPresentation/CkgAbbyyPresentation/Views/MainWindow.xaml
+++ b/Jahresziele/2015/ABBYY/dev/CkgAbbyyPresentation/CkgAbbyyPresentation/Views/MainWindow.xaml
@@ -11,7 +11,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="150" />
-            <RowDefinition Height="360" />
+            <RowDefinition Height="370" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -21,7 +21,7 @@
 
         <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" Margin="10">
             <StackPanel Margin="0,5,0,0">
-                <TextBlock Text="Dokumenten-Typ:" FontWeight="Bold" VerticalAlignment="Top" Margin="0,0,0,7" />
+                <TextBlock Text="Dokumenten-Typ:" FontWeight="Bold" FontSize="14" VerticalAlignment="Top" Margin="0,0,0,7" />
                 <StackPanel>
                     <ListBox Style="{StaticResource lbRadioButtonListHorizontalSmall}" ItemsSource="{Binding CategoryViewModels}" SelectedItem="{Binding SelectedCategoryViewModel}">
                         <ListBox.ItemTemplate>
@@ -55,10 +55,10 @@
                             Content="{StaticResource image/24x24/play}" />
                 </StackPanel>
 
-                <TextBlock Text="Dieses Programm wurde entwickelt von Matthias Jenzen im Dezember 2015" VerticalAlignment="Top" Margin="0,0,0,0" Foreground="Gray" />
+                <TextBlock Text="Dieses Programm wurde entwickelt von Matthias Jenzen im Dezember 2015" VerticalAlignment="Top" Margin="6,10,0,0" Foreground="Gray" />
             </StackPanel>
         </StackPanel>
-        <StackPanel Grid.Row="0" Grid.Column="1" Margin="10" Background="White">
+        <StackPanel Grid.Row="0" Grid.Column="1" Margin="10,0,10,10" Background="White">
             <Border BorderBrush="Blue" BorderThickness="0" Background="White" Margin="25,0,0,0">
                 <MediaElement Name="MediaElement" LoadedBehavior="Manual" MediaEnded="MediaElement_MediaEnded"
                               Height="260" HorizontalAlignment="Left" VerticalAlignment="Top" Stretch="None" Margin="0,-90,0,0">
@@ -68,25 +68,21 @@
 
         <StackPanel Grid.Row="1" Grid.Column="0" DataContext="{Binding SelectedCategoryViewModel}" Margin="10,10,10,0">
             <StackPanel>
-                <TextBlock FontWeight="Bold" Text="Verarbeitete Dokumente:" VerticalAlignment="Top" Margin="0,0,0,7" />
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock FontWeight="Bold" FontSize="14" Text="{Binding ItemsCount}" VerticalAlignment="Top" Margin="8,0,2,7" />
+                    <TextBlock FontWeight="Bold" FontSize="14" Text="verarbeitete Dokumente:" VerticalAlignment="Top" Margin="0,0,0,7" />
+                </StackPanel>
                 <DataGrid ItemsSource="{Binding Items}" SelectedItem="{Binding SelectedItem}" Style="{StaticResource GradientDataGrid}" 
                           VerticalScrollBarVisibility="Visible"
                           Height="300" Background="White" Margin="5,0,0,0">
-                    <DataGrid.Resources>
-                        <Style TargetType="DataGridRow">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding IsError}" Value="True">
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </DataGrid.Resources>
                     <DataGrid.Columns>
                         <DataGridTemplateColumn Header="" Width="50">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <StackPanel>
-                                        <ContentPresenter ToolTip="OCR Erkennung erfolgreich" Content="{StaticResource image/16x16/OK}" Visibility="{Binding IsError, Converter={StaticResource BooleanVisibilityInverseConverter}}" />
-                                        <ContentPresenter ToolTip="OCR Erkennung mit Fehlern!" Content="{StaticResource image/16x16/alert}" Visibility="{Binding IsError, Converter={StaticResource BooleanVisibilityConverter}}" />
+                                        <ContentPresenter ToolTip="OCR Erkennung erfolgreich!" Content="{StaticResource image/16x16/OK}" Visibility="{Binding IsValid, Converter={StaticResource BooleanVisibilityConverter}}" />
+                                        <ContentPresenter ToolTip="OCR Erkennung nur partiell erfolgreich, aber mit Fehlern!" Content="{StaticResource image/16x16/alert}" Visibility="{Binding IsWarning, Converter={StaticResource BooleanVisibilityConverter}}" />
+                                        <ContentPresenter ToolTip="OCR Erkennung fehlgeschlagen!" Content="{StaticResource image/16x16/cancel}" Visibility="{Binding IsError, Converter={StaticResource BooleanVisibilityConverter}}" />
                                     </StackPanel>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
@@ -97,7 +93,7 @@
 
             </StackPanel>
 
-            <TextBlock Text="XML Output:" FontWeight="Bold" Margin="0,10,0,0" />
+            <TextBlock Text="XML Output:" FontWeight="Bold" FontSize="14" Margin="0,17,0,0" />
         </StackPanel>
 
         <ScrollViewer Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" DataContext="{Binding SelectedCategoryViewModel.SelectedItem}" Margin="10">
