--- a/inetpub/wwwroot/ServicesMvc/Views/Fahrzeuge/Carporterfassung/FahrzeugnacherfassungForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Fahrzeuge/Carporterfassung/FahrzeugnacherfassungForm.cshtml
@@ -115,7 +115,7 @@
         <script type="text/javascript">       
             _modelIsValid = @ViewContext.ViewData.ModelState.IsValid.ToString().ToLower();
 
-            ApplySelection(true);
+            ApplySelection(true, true);
         </script>
     }
 </div>
