--- a/dev/MyBoss/MyBoss/App.xaml
+++ b/dev/MyBoss/MyBoss/App.xaml
@@ -2,4 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/WpfTools4;component/Resources/Converters.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/WpfTools4;component/Resources/Images.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/WpfTools4;component/Resources/Styles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
