--- a/inetpub/wwwroot/ServicesMvc/Areas/Common/Views/Dashboard/Index.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Common/Views/Dashboard/Index.cshtml
@@ -71,7 +71,7 @@
         FormPrepareAjax();
     }
 
-    var _dashboardData = { data: null, options: null };
+    var _dashboardData = { data: null, options: null, dashboardItemOptions: null };
 
     function FormPrepareDashboard() {
 
@@ -117,6 +117,8 @@
                     _ChartPrepareJsonResult(result, $(widgetId).data("widgetDefinition").widgetKey);
                     _dashboardData.data = _chartData;
                     _dashboardData.options = _chartOptions;
+                    _dashboardData.dashboardItemOptions = _dashboardItemOptions;
+                    alert(_dashboardData.dashboardItemOptions.ColumnSpan);
 
                     hideBusy(busyHintDiv);
                     busyHintDiv.hide();
@@ -201,6 +203,7 @@
                     _ChartPrepareJsonResult(result, $(widgetId).data("widgetDefinition").widgetKey);
                     _dashboardData.data = _chartData;
                     _dashboardData.options = _chartOptions;
+                    _dashboardData.dashboardItemOptions = _dashboardItemOptions;
 
                     $(widgetId + " .sDashboard-refresh-icon").trigger("click");
                     SetupWidgetToolbar(widgetId);
